fix/workaround switch dot bleeds through PageHeader

--- a/src/style.css
+++ b/src/style.css
@@ -165,6 +165,7 @@ a {
     border-radius: 10px;
     background-color: white;
     transition: 250ms transform;
+    z-index: 1;
   }
 .switch__thumb[data-checked] {
     transform: translateX(calc(100% - 1px));
@@ -175,56 +176,7 @@ a {
     font-size: 14px;
     user-select: none;
   }
-  .tabs {
-    width: 100%;
-  }
-  .tabs[data-orientation="vertical"] {
-    display: flex;
-  }
-  .tabs__list {
-    position: relative;
-    display: flex;
-  }
-  .tabs__list[data-orientation="horizontal"] {
-    align-items: center;
-    border-bottom: 1px solid hsl(240 5% 84%);
-  }
-  .tabs__list[data-orientation="vertical"] {
-    flex-direction: column;
-    align-items: stretch;
-    border-right: 1px solid hsl(240 5% 84%);
-  }
-  .tabs__indicator {
-    position: absolute;
-    background-color: hsl(200 98% 39%);
-    transition: all 250ms;
-  }
-  .tabs__indicator[data-orientation="horizontal"] {
-    bottom: -1px;
-    height: 2px;
-  }
-  .tabs__indicator[data-orientation="vertical"] {
-    right: -1px;
-    width: 2px;
-  }
-  .tabs__trigger {
-    display: inline-block;
-    outline: none;
-  }
-  .tabs__trigger:hover {
-    background-color: hsl(0 0% 98%);
-    color: hsl(240 5% 34%);
-  }
-  .tabs__trigger:focus-visible {
-    background-color: hsl(240 5% 96%);
-  }
-  .tabs__trigger[data-disabled],
-  .tabs__trigger[data-disabled]:hover {
-    opacity: 0.5;
-    background-color: transparent;
-  }
-  .tabs__content {
-  }
+
   .tooltip__trigger {
     appearance: none;
     display: inline-flex;
